--- a/theme/portafolio.html
+++ b/theme/portafolio.html
@@ -56,7 +56,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
         <div class="div-50">
-          <div class="div-block-proyecto">{%- image images.101b7157.url, images.101b7157.alt, '[{"max":10000,"size":"100vw"}]', '' -%}</div>
+          <div class="div-block-proyecto">{%- image images.101b7157.url, images.101b7157.alt, '[{"max":414,"size":"89vw"},{"max":767,"size":"369px"},{"max":991,"size":"43vw"},{"max":10000,"size":"369px"}]', '' -%}</div>
         </div>
       </div>
       <div class="div-horizontal">
@@ -70,7 +70,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
         <div class="div-50">
-          <div class="div-block-proyecto">{%- image images.440424d0.url, images.440424d0.alt, '[{"max":10000,"size":"100vw"}]', '' -%}</div>
+          <div class="div-block-proyecto">{%- image images.440424d0.url, images.440424d0.alt, '[{"max":304,"size":"85vw"},{"max":10000,"size":"259px"}]', '' -%}</div>
         </div>
       </div>
       <div class="div-horizontal">
@@ -78,14 +78,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="div-block-proyecto">
             <h2 class="heading-2">{{ texts.-78e33b5a }}</h2>
             <p class="paragraph dark medium">{{ texts.-3a8c64c7 }}</p>
-            <div class="div-block-14 fullwidth">{%- image images.-6f61b41d.url, images.-6f61b41d.alt, '[{"max":479,"size":"92vw"},{"max":10000,"size":"300.484375px"}]', 'class="img-columnas"' -%}{%- image images.-6f539c9c.url, images.-6f539c9c.alt, '[{"max":479,"size":"92vw"},{"max":10000,"size":"300.484375px"}]', 'class="img-columnas"' -%}</div>
+            <div class="div-block-14 fullwidth">{%- image images.-6f61b41d.url, images.-6f61b41d.alt, '[{"max":479,"size":"92vw"},{"max":767,"size":"88vw"},{"max":10000,"size":"45vw"}]', 'class="img-columnas"' -%}{%- image images.-6f539c9c.url, images.-6f539c9c.alt, '[{"max":479,"size":"92vw"},{"max":767,"size":"88vw"},{"max":10000,"size":"45vw"}]', 'class="img-columnas"' -%}</div>
           </div>
         </div>
         <div class="div-50">
           <div class="div-block-proyecto">
             <h2 class="heading-2">{{ texts.-3e3c9f6b }}</h2>
             <p class="paragraph dark medium">{{ texts.-6036b884 }}</p>
-            <div class="div-block-14 fullwidth">{%- image images.-7c8c5a3b.url, images.-7c8c5a3b.alt, '[{"max":479,"size":"95vw"},{"max":767,"size":"368.828125px"},{"max":991,"size":"45vw"},{"max":10000,"size":"368.828125px"}]', 'class="img-columnas"' -%}{%- image images.61af75e0.url, images.61af75e0.alt, '[{"max":479,"size":"95vw"},{"max":767,"size":"368.828125px"},{"max":991,"size":"45vw"},{"max":10000,"size":"368.828125px"}]', 'class="img-columnas"' -%}{%- image images.278f32a7.url, images.278f32a7.alt, '[{"max":479,"size":"95vw"},{"max":767,"size":"368.828125px"},{"max":991,"size":"45vw"},{"max":10000,"size":"368.828125px"}]', 'class="img-columnas"' -%}{%- image images.48ee67ce.url, images.48ee67ce.alt, '[{"max":479,"size":"95vw"},{"max":767,"size":"368.828125px"},{"max":991,"size":"45vw"},{"max":10000,"size":"368.828125px"}]', 'class="img-columnas"' -%}</div>
+            <div class="div-block-14 fullwidth">{%- image images.-7c8c5a3b.url, images.-7c8c5a3b.alt, '[{"max":479,"size":"92vw"},{"max":767,"size":"88vw"},{"max":10000,"size":"45vw"}]', 'class="img-columnas"' -%}{%- image images.61af75e0.url, images.61af75e0.alt, '[{"max":479,"size":"92vw"},{"max":767,"size":"88vw"},{"max":10000,"size":"45vw"}]', 'class="img-columnas"' -%}{%- image images.278f32a7.url, images.278f32a7.alt, '[{"max":479,"size":"92vw"},{"max":767,"size":"88vw"},{"max":10000,"size":"45vw"}]', 'class="img-columnas"' -%}{%- image images.48ee67ce.url, images.48ee67ce.alt, '[{"max":479,"size":"92vw"},{"max":767,"size":"88vw"},{"max":10000,"size":"45vw"}]', 'class="img-columnas"' -%}</div>
           </div>
         </div>
       </div>
