--- a/theme/revestimientos-de-madera.html
+++ b/theme/revestimientos-de-madera.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f33946114c9d" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
+<html data-wf-page="61b0ad9a49f4dde2f752f2a6" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
   <meta charset="utf-8">
   
   
@@ -34,18 +34,39 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
-  <meta name="keywords" content="marcas de maderas, marcas pisos de madera, marcas pergolas">
+  <meta name="keywords" content="revestimiento con madera">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
         vertical-align: middle;
         display: inline-block; }</style></head>
 <body>
   {%- include "partials/menu" -%}
-  <div id="decksdemadera" class="section-proyectos wf-section">
-    <div class="container w-container">
-      <h1 class="heading-h1">{{ texts.3adae108 }}</h1>
-      <h2 class="heading-2">{{ texts.29a48eba }}</h2>
-      <p class="paragraph dark medium">{{ texts.-1a80352a }}</p>{%- image images.13c4cbba.url, images.13c4cbba.alt, '[{"max":10000,"size":"100vw"}]', '' -%}
+  <div class="section-header-1 wf-section">
+    <div class="header-relative-container">
+      <div class="slider-revestimiento"></div>
+      <div class="div-heading-1">
+        <div class="w-container">
+          <h1 class="heading-h1 center light">{{ texts.-4eb262b }}</h1>
+          <p class="paragraph light big center">{{ texts.45c232db }}<br>{{ texts.3541ae04 }}</p>
+          <div class="div-block">
+            <a href="{{ links.7e44150 }}" class="boton-naranja w-button">{{ texts.-3489eade }}</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="revestimientos" class="section-decks-sinteticos wf-section">
+    <div class="div-container">
+      <h2 class="heading-2 center">{{ texts.-3a2d684d }}</h2>
+      <p class="paragraph dark medium center">{{ texts.-752a350b }}</p>
+      <a href="{{ links.23 }}" class="lightbox-galeria w-inline-block w-lightbox">{%- image images.-4e250faf.url, images.-4e250faf.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"97vw"},{"max":979,"size":"98vw"},{"max":10000,"size":"960px"}]', 'loading="lazy"' -%}
+        <div class="boton div-boton">
+          <div>{{ texts.665c3816 }}</div>
+        </div>
+        <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"revestimiento-galeria-5.jpg","fileName":"revestimiento-galeria-5.jpg","fileSize":135996,"height":803,"url":"/assets/images/revestimiento-galeria-5.jpg","width":1440,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-4.jpg","fileName":"revestimiento-galeria-4.jpg","fileSize":88648,"height":804,"url":"/assets/images/revestimiento-galeria-4.jpg","width":1440,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-3.jpg","fileName":"revestimiento-galeria-3.jpg","fileSize":122060,"height":882,"url":"/assets/images/revestimiento-galeria-3.jpg","width":918,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-2.jpg","fileName":"revestimiento-galeria-2.jpg","fileSize":91759,"height":872,"url":"/assets/images/revestimiento-galeria-2.jpg","width":753,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-1.jpg","fileName":"revestimiento-galeria-1.jpg","fileSize":79865,"height":869,"url":"/assets/images/revestimiento-galeria-1.jpg","width":963,"type":"image"}],"group":""}</script>
+      </a>
+      <h3 class="center">{{ texts.-4d61917c }}</h3>
+      <a href="{{ links.16bdc17e }}" class="boton w-button">{{ texts.-1df83b91 }}</a>
     </div>
   </div>
   {%- include "partials/footer" -%}
