--- a/theme/techos-y-cubiertas-para-pergolas.html
+++ b/theme/techos-y-cubiertas-para-pergolas.html
@@ -104,7 +104,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph dark big center">{{ texts.663a2957 }}</p>
       <p class="paragraph dark medium center">{{ texts.77dd9e1d }}</p>
       <div class="div-galeria">
-        <a href="{{ links.23 }}" class="lightbox-link full-width w-inline-block w-lightbox">{%- image images.-4958f2aa.url, images.-4958f2aa.alt, '[{"max":991,"size":"100vw"},{"max":10000,"size":"960px"}]', 'id="ventajasencapsulado" class="image"' -%}
+        <a href="{{ links.23 }}" class="lightbox-link full-width w-inline-block w-lightbox">{%- image images.-4958f2aa.url, images.-4958f2aa.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"97vw"},{"max":10000,"size":"98vw"}]', 'id="ventajasencapsulado" class="image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"5a5bfa2fa0eb5000019c94b6","origFileName":"01-encapsuladofv-cubierta-de-ixtle.jpg","fileName":"01-encapsuladofv-cubierta-de-ixtle.jpg","fileSize":138126,"height":700,"url":"/assets/images/01-encapsuladofv-cubierta-de-ixtle.jpg","width":1000,"caption":"Techo de encapsulado FV de Ixtle","type":"image"},{"_id":"5a5bfa2f24d14a0001997690","origFileName":"02-encapsuladofv-cubierta-de-ixtle.jpg","fileName":"02-encapsuladofv-cubierta-de-ixtle.jpg","fileSize":90080,"height":660,"url":"/assets/images/02-encapsuladofv-cubierta-de-ixtle.jpg","width":800,"caption":"Techo de encapsulado FV de Ixtle","type":"image"}],"group":""}</script>
         </a>
       </div>
@@ -131,23 +131,23 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div id="encapsulados" class="section-encapsulados wf-section">
     <div class="div-container">
-      <div class="image-thumbnail-redondo encapsulado"></div>{%- image images.-27bd18ad.url, images.-27bd18ad.alt, '[{"max":960,"size":"100vw"},{"max":10000,"size":"960px"}]', 'class="imagen-techos"' -%}
+      <div class="image-thumbnail-redondo encapsulado"></div>{%- image images.-27bd18ad.url, images.-27bd18ad.alt, '[{"max":479,"size":"100vw"},{"max":767,"size":"97vw"},{"max":979,"size":"98vw"},{"max":10000,"size":"960px"}]', 'class="imagen-techos"' -%}
       <h2 class="heading-2 center">{{ texts.2dad06fd }}</h2>
       <p class="paragraph dark big center">{{ texts.-d3b99d0 }}</p>
       <p class="paragraph dark medium center">{{ texts.-1c3cbf4a }}</p>
       <p class="paragraph dark medium center">{{ texts.-14a31c0 }}</p>
       <a target="_blank" href="{{ links.-5d1a6568 }}" class="link-text big-underline">{{ texts.579a8dd2 }}</a>
       <div class="div-galeria-encapsulados">
-        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.707c2929.url, images.707c2929.alt, '[{"max":479,"size":"29vw"},{"max":991,"size":"23vw"},{"max":10000,"size":"220.796875px"}]', '' -%}
+        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.707c2929.url, images.707c2929.alt, '[{"max":479,"size":"29vw"},{"max":767,"size":"22vw"},{"max":10000,"size":"23vw"}]', '' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"5a74dec05514460001eb9236","origFileName":"techo-encapsulado-pergola_01.JPG","fileName":"techo-encapsulado-pergola_01.JPG","fileSize":71821,"height":700,"url":"/assets/images/techo-encapsulado-pergola_01.JPG","width":700,"type":"image"}],"group":"encapsulados"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.708a40aa.url, images.708a40aa.alt, '[{"max":479,"size":"29vw"},{"max":991,"size":"23vw"},{"max":10000,"size":"220.796875px"}]', '' -%}
+        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.708a40aa.url, images.708a40aa.alt, '[{"max":479,"size":"29vw"},{"max":767,"size":"22vw"},{"max":10000,"size":"23vw"}]', '' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"5a74dec05514460001eb9237","origFileName":"techo-encapsulado-pergola_02.JPG","fileName":"techo-encapsulado-pergola_02.JPG","fileSize":90208,"height":700,"url":"/assets/images/techo-encapsulado-pergola_02.JPG","width":700,"type":"image"}],"group":"encapsulados"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.7098582b.url, images.7098582b.alt, '[{"max":479,"size":"29vw"},{"max":991,"size":"23vw"},{"max":10000,"size":"220.796875px"}]', '' -%}
+        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.7098582b.url, images.7098582b.alt, '[{"max":479,"size":"29vw"},{"max":767,"size":"22vw"},{"max":10000,"size":"23vw"}]', '' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"5a74dec0681ad20001def25c","origFileName":"techo-encapsulado-pergola_03.JPG","fileName":"techo-encapsulado-pergola_03.JPG","fileSize":69188,"height":700,"url":"/assets/images/techo-encapsulado-pergola_03.JPG","width":700,"type":"image"}],"group":"encapsulados"}</script>
         </a>
-        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.70a66fac.url, images.70a66fac.alt, '[{"max":479,"size":"29vw"},{"max":991,"size":"23vw"},{"max":10000,"size":"220.796875px"}]', '' -%}
+        <a href="{{ links.23 }}" class="lightbox-link-2 w-inline-block w-lightbox">{%- image images.70a66fac.url, images.70a66fac.alt, '[{"max":479,"size":"29vw"},{"max":767,"size":"22vw"},{"max":10000,"size":"23vw"}]', '' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"5a74dec0681ad20001def25d","origFileName":"techo-encapsulado-pergola_04.JPG","fileName":"techo-encapsulado-pergola_04.JPG","fileSize":96654,"height":700,"url":"/assets/images/techo-encapsulado-pergola_04.JPG","width":700,"type":"image"}],"group":"encapsulados"}</script>
         </a>
       </div>
@@ -160,7 +160,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph dark big center">{{ texts.1068f93b }}</p>
       <p class="paragraph dark medium center">{{ texts.7d9e9bcc }}</p>
       <p class="paragraph dark medium center">{{ texts.-56ac4c60 }}</p>
-      <a href="{{ links.23 }}" class="lightbox-link full-width w-inline-block w-lightbox">{%- image images.4d1c4a4b.url, images.4d1c4a4b.alt, '[{"max":991,"size":"100vw"},{"max":10000,"size":"960px"}]', 'class="image"' -%}
+      <a href="{{ links.23 }}" class="lightbox-link full-width w-inline-block w-lightbox">{%- image images.4d1c4a4b.url, images.4d1c4a4b.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"97vw"},{"max":10000,"size":"98vw"}]', 'class="image"' -%}
         <script type="application/json" class="w-json">{"items":[{"_id":"5a5bfbc311f84b0001e9344c","origFileName":"01pergolado-con-policarbonato.jpg","fileName":"01pergolado-con-policarbonato.jpg","fileSize":78297,"height":507,"url":"/assets/images/01pergolado-con-policarbonato.jpg","width":933,"caption":"Techo de policarbonato","type":"image"},{"_id":"5a5bfbc324d14a00019976c9","origFileName":"02pergolado-con-policarbonato.jpg","fileName":"02pergolado-con-policarbonato.jpg","fileSize":53987,"height":543,"url":"/assets/images/02pergolado-con-policarbonato.jpg","width":472,"caption":"Techo de policarbonato","type":"image"}],"group":""}</script>
       </a>
       <div class="div-ventajas">
@@ -181,7 +181,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="image-thumbnail-redondo vidriotemplado"></div>
       <p class="paragraph dark big center">{{ texts.-43a12695 }}</p>
       <p class="paragraph dark medium center">{{ texts.-8d0923b }}</p>
-      <p class="paragraph dark medium center">{{ texts.-7cc7e195 }}</p>{%- image images.6bc09a80.url, images.6bc09a80.alt, '[{"max":960,"size":"100vw"},{"max":10000,"size":"960px"}]', 'class="div-horizontal-con-espacio-superior"' -%}
+      <p class="paragraph dark medium center">{{ texts.-7cc7e195 }}</p>{%- image images.6bc09a80.url, images.6bc09a80.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"97vw"},{"max":979,"size":"98vw"},{"max":10000,"size":"960px"}]', 'class="div-horizontal-con-espacio-superior"' -%}
       <div class="div-ventajas">
         <h3 class="heading-3 ventajas">{{ texts.411adaeb }}</h3>
         <ul role="list" class="unordered-list">
@@ -202,7 +202,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph dark big center">{{ texts.-7880ebf9 }}</p>
       <p class="paragraph dark medium center">{{ texts.2d1ff684 }}</p>
       <p class="paragraph dark medium center">{{ texts.29a0da1f }}</p>
-      <p class="paragraph dark medium center">{{ texts.-5762c67a }}</p>{%- image images.81bf26.url, images.81bf26.alt, '[{"max":960,"size":"100vw"},{"max":10000,"size":"960px"}]', 'class="div-horizontal-con-espacio-superior"' -%}
+      <p class="paragraph dark medium center">{{ texts.-5762c67a }}</p>{%- image images.81bf26.url, images.81bf26.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"97vw"},{"max":979,"size":"98vw"},{"max":10000,"size":"960px"}]', 'class="div-horizontal-con-espacio-superior"' -%}
       <div class="div-ventajas">
         <h3 class="heading-3 ventajas">{{ texts.-128a4b63 }}</h3>
         <ul role="list" class="unordered-list">
