--- a/theme/decks.html
+++ b/theme/decks.html
@@ -34,7 +34,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WXKJKD4');</script>
   <!--  End Google Tag Manager  -->
-  <meta name="keywords" content="Decks, decks de madera, eco deck, eco-deck, ecodeck, deck sintetico">
+  <meta name="keywords" content="Decks, decks de madera, eco deck, eco-deck, ecodeck, deck sintético">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>picture { border: 0;
         max-width: 100%;
         vertical-align: middle;
@@ -42,26 +42,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <body>
   {%- include "partials/menu" -%}
   <div class="section-header-1 wf-section">
-    <div data-delay="3500" data-animation="cross" class="slider-3 w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="1500" data-infinite="true">
-      <div class="w-slider-mask">
-        <div class="decks-slider _01 w-slide"></div>
-        <div class="decks-slider decks02 w-slide"></div>
-        <div class="decks-slider decks03 w-slide"></div>
+    <div class="header-relative-container">
+      <div data-delay="3500" data-animation="cross" class="slider-3 w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="1500" data-infinite="true">
+        <div class="w-slider-mask">
+          <div class="decks-slider _01 w-slide"></div>
+          <div class="decks-slider decks02 w-slide"></div>
+          <div class="decks-slider decks03 w-slide"></div>
+        </div>
+        <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-arrow-left">
+          <div class="w-icon-slider-left"></div>
+        </div>
+        <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-arrow-right">
+          <div class="w-icon-slider-right"></div>
+        </div>
+        <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-nav w-round"></div>
       </div>
-      <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-arrow-left">
-        <div class="w-icon-slider-left"></div>
-      </div>
-      <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-arrow-right">
-        <div class="w-icon-slider-right"></div>
-      </div>
-      <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-nav w-round"></div>
-    </div>
-    <div class="div-heading-1">
-      <div class="w-container">
-        <h1 class="heading-h1 center light">{{ texts.1da09c6f }}</h1>
-        <p class="paragraph light big center">{{ texts.-6ea857b5 }}</p>
-        <div class="div-block">
-          <a href="{{ links.416a36a7 }}" class="boton-naranja w-button">{{ texts.-3489eade }}</a>
+      <div class="div-heading-1">
+        <div class="w-container">
+          <h1 class="heading-h1 center light">{{ texts.1fca770c }}</h1>
+          <p class="paragraph light big center">{{ texts.-6ea857b5 }}</p>
+          <div class="div-block">
+            <a href="{{ links.416a36a7 }}" class="boton-naranja w-button">{{ texts.-3489eade }}</a>
+          </div>
         </div>
       </div>
     </div>
@@ -129,7 +131,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div id="deckmadera" class="section-decksdemadera wf-section">
     <div class="div-container">
       <h2 class="heading-2 center">{{ texts.19f287ec }}</h2>
-      <p class="paragraph dark big center">{{ texts.-41b86dd1 }}</p>
+      <p class="paragraph dark big center">{{ texts.-13dd06d9 }}<br>{{ texts.76652456 }}</p>
       <h3 class="center">{{ texts.593a958b }}</h3>
       <p class="paragraph dark medium center">{{ texts.-3675d188 }}</p>
       <div class="w-layout-grid grid-3-columnas">
@@ -184,7 +186,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph dark big center">{{ texts.3effcf36 }}</p>
       <p class="paragraph dark medium center">{{ texts.73ced5e2 }}</p>
       <h3 class="center">{{ texts.7b300b7e }}</h3>
-      <p class="paragraph dark medium center">{{ texts.-3f3c4eb4 }}</p>
       <div class="contenedor-lightbox">
         <a href="{{ links.23 }}" class="lightbox-link w-inline-block w-lightbox">{%- image images.5c6697b3.url, images.5c6697b3.alt, '[{"max":767,"size":"19vw"},{"max":10000,"size":"20vw"}]', 'loading="lazy" class="lightbox-image"' -%}
           <script type="application/json" class="w-json">{"items":[{"_id":"61965e6f714e9164a56a3c68","origFileName":"deck-sintetico-UH01.jpg","fileName":"deck-sintetico-UH01.jpg","fileSize":11674,"height":482,"url":"/assets/images/deck-sintetico-uh01.jpg","width":643,"caption":"Deck sintético tipo eco-deck","type":"image"}],"group":"eco-deck"}</script>
@@ -230,9 +231,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <script type="application/json" class="w-json">{"items":[{"_id":"619663363c530385e1b20e73","origFileName":"deck-sintetico-hard-3.jpg","fileName":"deck-sintetico-hard-3.jpg","fileSize":80941,"height":415,"url":"/assets/images/deck-sintetico-hard-3.jpg","width":414,"type":"image"}],"group":"eco-deck"}</script>
         </a>
       </div>
+    </div>
+  </div>
+  <div id="revestimientos" class="section-decks-sinteticos wf-section">
+    <div class="div-container">
       <h2 class="heading-2 center">{{ texts.325cb317 }}</h2>
-      <p class="paragraph dark medium center">{{ texts.-310afdd3 }}</p>
+      <p class="paragraph dark medium center">{{ texts.205d841 }}<br>{{ texts.49a4fb4e }}</p>
       <a href="{{ links.23 }}" class="lightbox-galeria w-inline-block w-lightbox">{%- image images.-4e250faf.url, images.-4e250faf.alt, '[{"max":479,"size":"96vw"},{"max":767,"size":"97vw"},{"max":979,"size":"98vw"},{"max":10000,"size":"960px"}]', 'loading="lazy"' -%}
+        <div class="boton div-boton">
+          <div>{{ texts.665c3816 }}</div>
+        </div>
         <script type="application/json" class="w-json">{"items":[{"_id":"example_img","origFileName":"revestimiento-galeria-5.jpg","fileName":"revestimiento-galeria-5.jpg","fileSize":135996,"height":803,"url":"/assets/images/revestimiento-galeria-5.jpg","width":1440,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-4.jpg","fileName":"revestimiento-galeria-4.jpg","fileSize":88648,"height":804,"url":"/assets/images/revestimiento-galeria-4.jpg","width":1440,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-3.jpg","fileName":"revestimiento-galeria-3.jpg","fileSize":122060,"height":882,"url":"/assets/images/revestimiento-galeria-3.jpg","width":918,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-2.jpg","fileName":"revestimiento-galeria-2.jpg","fileSize":91759,"height":872,"url":"/assets/images/revestimiento-galeria-2.jpg","width":753,"type":"image"},{"_id":"example_img","origFileName":"revestimiento-galeria-1.jpg","fileName":"revestimiento-galeria-1.jpg","fileSize":79865,"height":869,"url":"/assets/images/revestimiento-galeria-1.jpg","width":963,"type":"image"}],"group":""}</script>
       </a>
       <h3 class="center">{{ texts.-4064ce53 }}</h3>
