--- a/theme/mobiliario-y-carpinteria.html
+++ b/theme/mobiliario-y-carpinteria.html
@@ -42,23 +42,25 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <body>
   {%- include "partials/menu" -%}
   <div class="section-header-1 wf-section">
-    <div data-delay="3500" data-animation="cross" class="slider-3 w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="1500" data-infinite="true">
-      <div class="w-slider-mask">
-        <div class="carpinteria-slider w-slide"></div>
+    <div class="header-relative-container">
+      <div data-delay="3500" data-animation="cross" class="slider-3 w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="1500" data-infinite="true">
+        <div class="w-slider-mask">
+          <div class="carpinteria-slider w-slide"></div>
+        </div>
+        <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-arrow-left">
+          <div class="w-icon-slider-left"></div>
+        </div>
+        <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-arrow-right">
+          <div class="w-icon-slider-right"></div>
+        </div>
+        <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-nav w-round"></div>
       </div>
-      <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-arrow-left">
-        <div class="w-icon-slider-left"></div>
-      </div>
-      <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-arrow-right">
-        <div class="w-icon-slider-right"></div>
-      </div>
-      <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-slider-nav w-round"></div>
-    </div>
-    <div class="div-heading-1">
-      <div class="w-container">
-        <h1 class="heading-h1 center light">{{ texts.688560ec }}</h1>
-        <div class="div-block">
-          <a href="{{ links.23 }}" class="boton-naranja w-button">{{ texts.-39baa740 }}</a>
+      <div class="div-heading-1">
+        <div class="w-container">
+          <h1 class="heading-h1 center light">{{ texts.688560ec }}</h1>
+          <div class="div-block">
+            <a href="{{ links.23 }}" class="boton-naranja w-button">{{ texts.-39baa740 }}</a>
+          </div>
         </div>
       </div>
     </div>
@@ -71,8 +73,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph dark medium center">{{ texts.-3c01d7d4 }}</p>
       <a href="{{ links.23 }}" class="boton-naranja w-button">{{ texts.2e35f721 }}</a>
       <div class="div-galeria-2-column">
-        <div class="div-block-14">{%- image images.3ec2e156.url, images.3ec2e156.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'class="img-columnas"' -%}{%- image images.-5b623717.url, images.-5b623717.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'class="img-columnas"' -%}{%- image images.-158fc48d.url, images.-158fc48d.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'class="img-columnas"' -%}{%- image images.7e0796cd.url, images.7e0796cd.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'class="img-columnas"' -%}{%- image images.7e15ae4e.url, images.7e15ae4e.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'class="img-columnas"' -%}</div>
-        <div class="div-block-14">{%- image images.-7f070cb2.url, images.-7f070cb2.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'width="435" class="img-columnas"' -%}{%- image images.23c14c34.url, images.23c14c34.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'width="435" class="img-columnas"' -%}{%- image images.7df97f4c.url, images.7df97f4c.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'width="435" class="img-columnas"' -%}{%- image images.7e23c5cf.url, images.7e23c5cf.alt, '[{"max":479,"size":"45vw"},{"max":10000,"size":"217.5px"}]', 'width="435" class="img-columnas"' -%}</div>
+        <div class="div-block-14">{%- image images.3ec2e156.url, images.3ec2e156.alt, '[{"max":479,"size":"44vw"},{"max":767,"size":"46vw"},{"max":10000,"size":"47vw"}]', 'class="img-columnas"' -%}{%- image images.-5b623717.url, images.-5b623717.alt, '[{"max":479,"size":"44vw"},{"max":767,"size":"46vw"},{"max":10000,"size":"47vw"}]', 'class="img-columnas"' -%}{%- image images.-158fc48d.url, images.-158fc48d.alt, '[{"max":479,"size":"44vw"},{"max":767,"size":"46vw"},{"max":10000,"size":"47vw"}]', 'class="img-columnas"' -%}{%- image images.7e0796cd.url, images.7e0796cd.alt, '[{"max":479,"size":"44vw"},{"max":767,"size":"46vw"},{"max":10000,"size":"47vw"}]', 'class="img-columnas"' -%}{%- image images.7e15ae4e.url, images.7e15ae4e.alt, '[{"max":479,"size":"44vw"},{"max":767,"size":"46vw"},{"max":10000,"size":"47vw"}]', 'class="img-columnas"' -%}</div>
+        <div class="div-block-14">{%- image images.-7f070cb2.url, images.-7f070cb2.alt, '[{"max":479,"size":"44vw"},{"max":991,"size":"46vw"},{"max":10000,"size":"435px"}]', 'width="435" class="img-columnas"' -%}{%- image images.23c14c34.url, images.23c14c34.alt, '[{"max":479,"size":"44vw"},{"max":991,"size":"46vw"},{"max":10000,"size":"435px"}]', 'width="435" class="img-columnas"' -%}{%- image images.7df97f4c.url, images.7df97f4c.alt, '[{"max":479,"size":"44vw"},{"max":991,"size":"46vw"},{"max":10000,"size":"435px"}]', 'width="435" class="img-columnas"' -%}{%- image images.7e23c5cf.url, images.7e23c5cf.alt, '[{"max":479,"size":"44vw"},{"max":991,"size":"46vw"},{"max":10000,"size":"435px"}]', 'width="435" class="img-columnas"' -%}</div>
       </div>
     </div>
   </div>
