--- a/theme/decks.html
+++ b/theme/decks.html
@@ -59,7 +59,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-heading-1">
         <div class="w-container">
-          <h1 class="heading-h1 center light">{{ texts.1fca770c }}</h1>
+          <h1 class="heading-h1 center light">{{ texts.14c22e69 }}</h1>
           <p class="paragraph light big center">{{ texts.-6ea857b5 }}</p>
           <div class="div-block">
             <a href="{{ links.416a36a7 }}" class="boton-naranja w-button">{{ texts.-3489eade }}</a>
@@ -121,7 +121,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </a>
         <div class="div-center-vertical">
           <a href="{{ links.7dceb915 }}" class="link-block-tarjeta w-inline-block">
-            <h2 class="h2-small">{{ texts.-64ea79a9 }}</h2>
+            <h2 class="h2-small">{{ texts.6dbc45b4 }}</h2>
           </a>
           <a href="{{ links.-7e86c362 }}" class="boton w-button">{{ texts.1b4c8cf8 }}</a>
         </div>
@@ -182,8 +182,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div id="decksintetico" class="section-decks-sinteticos wf-section">
     <div class="div-container">
-      <h2 class="heading-2 center">{{ texts.-64ea79a9 }}</h2>
-      <p class="paragraph dark big center">{{ texts.3effcf36 }}</p>
+      <h2 class="heading-2 center">{{ texts.-1b34fbd }}</h2>
+      <p class="paragraph dark big center">{{ texts.747d677e }}</p>
       <p class="paragraph dark medium center">{{ texts.73ced5e2 }}</p>
       <h3 class="center">{{ texts.7b300b7e }}</h3>
       <div class="contenedor-lightbox">
